<resources>
    <string name="app_name">OICM</string>
    <string name="doctor">Doctor</string>
    <string name="patient">Patient</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="new_doctor">New Doctor Account?</string>
    <string name="forgot_password_msg">Please Provide your email ID. we will send you reset email on your mail</string>
    <string name="send_mail">Send Mail</string>
    <string name="types">Types</string>
    <string name="license">License</string>
    <string name="address">Address</string>
    <string name="mobile">Mobile</string>
    <string name="name">Name</string>
    <string name="signup">Singup</string>
    <string name="education">Education</string>
    <string name="title_activity_doctor_home">DoctorHomeActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="doctor_login">Login Doctor</string>
    <string name="patient_login">Login Patient</string>
    <string name="new_patient">New Patient?</string>
    <string name="age">Age</string>
    <string name="title_activity_patient_home">PatientHomeActivity</string>
    <string name="purpose">Purpose</string>
    <string name="date">Date</string>
    <string name="time">Time</string>
    <string name="remarks">Remarks</string>
    <string name="book">Book</string>
    <string name="report">Report</string>
    <string name="prescription">Prescription</string>
    <string name="prescription_title">Title</string>
    <string name="instruction">Instruction</string>
    <string name="choose_image">Choose Image</string>
    <string name="upload">Upload</string>
    <string name="add">Add</string>
    <string name="reminder">Set Reminder</string>
    <string name="chooselicense">Choose  License</string>
    <string name="labreport">Lab Report</string>
    <string name="patinet_report">Lab Report Patient</string>
    <string name="laboratory">Laboratory List</string>
    <string name="lab_book">Book Lab</string>
    <string name="medical_list">Medical List</string>
    <string name="disease">Basic Diseases</string>
    <string name="patient_reminder">Patiner Reminder</string>
    <string name="viewprescription">View Prescription</string>
    <string name="forgot_passwor">Forgot Password</string>
    <string name="doctorregi">Doctor Registration</string>
    <string name="loginsele">Login Selection</string>
    <string name="birth">Birth Date</string>
    <string name="search">Search</string>

</resources>
