<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        tools:context=".SignupActivity">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="150dp"
            android:contentDescription="@null"
            android:padding="30dp"
            android:src="@drawable/applogo" />

        <EditText
            android:id="@+id/activity_doctor_registration_name_ed"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:hint="@string/name" />

        <EditText
            android:id="@+id/activity_doctor_registration_email_ed"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:hint="@string/email" />

        <EditText
            android:id="@+id/activity_doctor_registration_password_ed"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:hint="@string/password"
            android:inputType="textPassword" />

        <EditText
            android:id="@+id/activity_doctor_registration_mobile_ed"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:hint="@string/mobile"
            android:inputType="numberDecimal" />


        <EditText
            android:id="@+id/activity_doctor_registration_address_ed"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:hint="@string/address" />


        <EditText
            android:id="@+id/activity_doctor_registration_license_ed"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:hint="@string/license" />

        <EditText
            android:id="@+id/activity_doctor_registration_educatuion_ed"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:hint="@string/education" />

        <EditText
            android:id="@+id/activity_doctor_registration_types"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:hint="@string/types" />
        <Button
            android:id="@+id/activity_signup_signup_choose_license"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:background="@color/colorPrimary"
            android:text="@string/chooselicense"
            android:textColor="@color/colorWhite" />

        <Button
            android:id="@+id/activity_signup_signup_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:background="@color/colorPrimary"
            android:text="@string/signup"
            android:textColor="@color/colorWhite" />

    </LinearLayout>

</ScrollView>