<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        tools:context=".SignupActivity">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="150dp"
            android:contentDescription="@null"
            android:padding="30dp"
            android:src="@drawable/applogo" />

        <EditText
            android:id="@+id/activity_patient_registration_name_ed"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:hint="@string/name" />

        <EditText
            android:id="@+id/activity_patient_registration_email_ed"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:inputType="textEmailAddress"
            android:hint="@string/email" />

        <EditText
            android:id="@+id/activity_patient_registration_password_ed"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:hint="@string/password"
            android:inputType="textPassword" />

        <EditText
            android:id="@+id/activity_patient_registration_mobile_ed"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:hint="@string/mobile"
            android:inputType="numberDecimal" />


        <EditText
            android:id="@+id/activity_patient_registration_address_ed"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:hint="@string/address" />



        <TextView
            android:id="@+id/activity_patient_registration_age"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:background="?attr/editTextBackground"
            android:gravity="center_vertical"
            android:hint="@string/birth"
            android:textAppearance="?android:attr/textAppearanceMediumInverse"
            android:textColor="@color/colorAccent" />


        <Button
            android:id="@+id/activity_patient_registration_signup_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:background="@color/colorPrimary"
            android:text="@string/signup"
            android:textColor="@color/colorWhite" />

    </LinearLayout>

</ScrollView>