<?xml version="1.0" encoding="utf-8"?>


<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".PresciptionActivity">

    <EditText
        android:id="@+id/activity_send_medicine_request_upload_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:hint="@string/prescription_title"
        android:inputType="text" />

    <EditText
        android:id="@+id/activity_send_medicine_request_upload_description"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:hint="@string/instruction" />

    <Button
        android:id="@+id/activity_send_medicine_request_upload_image_choose"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:background="@color/colorPrimaryDark"
        android:text="@string/choose_image"
        android:textColor="@color/colorWhite" />

    <Button
        android:id="@+id/activity_send_medicine_request_upload"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:background="@color/colorPrimaryDark"
        android:text="@string/upload"
        android:textColor="@color/colorWhite" />

</LinearLayout>