<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="20dp"
        tools:context=".LoginActivity">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="150dp"
            android:contentDescription="@null"
            android:src="@drawable/applogo" />

        <EditText
            android:id="@+id/actvitiy_patient_login_email_ed"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:hint="@string/email"
            android:inputType="textEmailAddress" />

        <EditText
            android:id="@+id/actvitiy_patient_login_password_ed"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:hint="@string/password"
            android:inputType="textPassword" />

        <Button
            android:id="@+id/actvitiy_patient_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:background="@color/colorPrimary"
            android:text="@string/login"
            android:textColor="@color/colorWhite" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:orientation="horizontal"
            android:weightSum="2">

            <TextView
                android:id="@+id/actvitiy_patient_login_forgot_pwd_tv"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/forgot_password"
                android:textColor="@color/colorPrimaryDark" />

            <TextView
                android:id="@+id/actvitiy_patient_login_new_patient_tv"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/new_patient"
                android:textAlignment="textEnd"
                android:textColor="@color/colorPrimaryDark" />

        </LinearLayout>
    </LinearLayout>
</ScrollView>