<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nestedScrollView"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:overScrollMode="never">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:context=".PresciptionActivity">

        <EditText
            android:id="@+id/activity_patient_reminder_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:hint="@string/prescription_title"
            android:inputType="text" />

        <EditText
            android:id="@+id/activity_patient_reminder_description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:hint="@string/instruction" />


        <TextView
            android:id="@+id/activity_patient_reminder_date"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:background="?attr/editTextBackground"
            android:gravity="center_vertical"
            android:hint="@string/date"
            android:textAppearance="?android:attr/textAppearanceMediumInverse"
            android:textColor="@color/colorAccent" />

        <TextView
            android:id="@+id/activity_patient_reminder_time"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:background="?attr/editTextBackground"
            android:gravity="center_vertical"
            android:hint="@string/time"
            android:textAppearance="?android:attr/textAppearanceMediumInverse"
            android:textColor="@color/colorAccent" />


        <Button
            android:textColor="@color/colorWhite"
            android:background="@color/colorPrimary"
            android:id="@+id/activity_patient_reminder_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:text="@string/reminder" />

        <android.support.v7.widget.RecyclerView
            android:id="@+id/activity_patient_reminder_rv"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:listitem="@layout/row_layout_reminder" />

    </LinearLayout>
</android.support.v4.widget.NestedScrollView>