<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ForgotPasswordActivity">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:padding="20dp"
        android:src="@drawable/applogo" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="30dp"
        android:text="@string/forgot_password_msg"
        android:textAlignment="center" />

    <EditText
        android:id="@+id/activity_forgot_password_email_ed"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:hint="@string/email" />

    <Button
        android:id="@+id/activity_forgot_password_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:background="@color/colorPrimary"
        android:text="@string/send_mail"
        android:textColor="@color/colorWhite" />

</LinearLayout>